# zuobiao

./: .gitignore  CIRCLE_DETECTION_GUIDE.md  FEATURE_PLANNING_COORDINATE_RECORDER.md  README.md  README2.md  README_HOTKEY_CUSTOM.md  README_HOTKEY_FIXED.md  README_WINDOWS.md  config.json  hotkey_diagnostic.py  hotkey_test.py  jietu.py  main.py  main_windows.py  minimal_test.py  pyproject.toml  requirements.txt  safe_test.py  simple_hotkey_test.py  start.py  start_as_admin.py  start_windows.py  test_gui.py  截图工具-Jietu.spec
.promptx/: pouch.json
.promptx/resource/: project.registry.json
core/: __init__.py  batch_processor.py  circle_capture.py  circle_detection.py  config.py  edge_detection.py  hotkey.py  screenshot.py
gui/: __init__.py  edge_detection_tab.py  image_canvas.py  main_window.py
utils/: __init__.py  coordinate_recorder.py  file_manager.py  image_info.py
